style(snackbar): fix z-index

--- a/src/components/Snackbar/Snackbar.module.css
+++ b/src/components/Snackbar/Snackbar.module.css
@@ -14,6 +14,7 @@
   box-shadow:
     0 4px 24px rgba(0, 0, 0, 0.18),
     0 1.5px 6px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .actionsContainer {
